[package]
name = "rusty_funge"
version = "2022.12.5"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.29", features = ["derive"] }
chrono = "0.4.23"
cursive = { version = "0.20.0", features = ["termion-backend"] }
rand = "0.8.5"
num = "0.4.0"
anyhow = "1.0.68"
thiserror = "1.0.38"
strum = "0.24.1"
strum_macros = "0.24.3"
regex = "1.7.0"