[package]
name = "rusty_funge"
version = "2024.5.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
chrono = "0.4.38"
cursive = { version = "0.20.0", features = ["termion-backend"] }
rand = "0.8.5"
num = "0.4.2"
anyhow = "1.0.82"
thiserror = "1.0.59"
strum = "0.26.2"
strum_macros = "0.26.2"
regex = "1.10.4"